--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -36,7 +36,7 @@
               </form>
               <div class="row align-items-center my-5"> 
                 <div class="alert alert-primary" role="alert">
-                    Al ingresar autorizas a Google y Alexa a acceder a tus dispositivos
+                    Al ingresar autorizas a Google y Alexa-Amazon a acceder a tus dispositivos
                 </div>
               </div>
         </div>
